[package]
name = "nac"
version = "0.1.0"
authors = ["inivekin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nac"
# crate-type = ["dylib"]
crate-type = ["cdylib"]

[dependencies]
num = "0.2"
derive_builder = "0.7.2"
slog = "2.5.2"
rand = "0.7.2"

[build-dependencies]
cbindgen = "0.5.2"
